# gllm

./: .gitignore  BUG-KNOWLEDGE.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION-STATUS.md  PHASE7-COMPLETION.md  README.md  TASKLIST.md  analyze_plan_lower.py  audit_report.md  auto_select_ops.txt  build.rs  c1-v2-granite-jit-design.md  debug_model.rs  fix_gllm.py  gpu-megakernel-abi-decision.md  libmod.rlib  libragged.rlib  patch_last.py  plan.md  precise_fix.py  precise_fix_2.py  precise_fix_3.py  run_gdb.sh  stress_test.rs  test_compress.rs  test_models.rs  trace_op_analysis.txt  trace_ops.txt
.github/workflows/: ci.yml  release-aot.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style.md  codebase_structure.md  loader_dag_dev_plan.md  project_overview.md  scheduler_refactor_design.md  scheduler_refactor_dev_plan.md  suggested_commands.md  task_completion.md
1/: mega_kernel_vm.txt
SPEC/: .id-registry.json  .wf-batch-state.json  .wf-global-context.json  00-INDEX.html  00-PHILOSOPHY.html  00-PHILOSOPHY.md  01-JIT-PIPELINE.html  01-JIT-PIPELINE.md  01-REQUIREMENTS.html  01-REQUIREMENTS.md  02-ARCHITECTURE.html  02-ARCHITECTURE.md  02-HARDWARE.html  02-HARDWARE.md  03-DATA-STRUCTURE.html  03-DATA-STRUCTURE.md  03-GRAPH-IR.html  03-GRAPH-IR.md  04-API-DESIGN.html  04-API-DESIGN.md  04-OPERATORS.html  04-OPERATORS.md  05-MODEL-REGISTRY.md  05-OPTIMIZATIONS.html  05-OPTIMIZATIONS.md  06-RUNTIME.html  06-RUNTIME.md  06-TESTING-STRATEGY.html  06-TESTING-STRATEGY.md  07-EXTREME-PERFORMANCE-SCHEME.md  07-LOADER.html  07-LOADER.md  07-OBSERVABILITY.html  07-OBSERVABILITY.md  08-EXECUTOR.html  08-EXECUTOR.md  08-LOADER-REFACTOR.md  09-API.html  09-API.md  10-QUALITY.html  (+94 more)
SPEC-archive/: 01-REQUIREMENTS.md  02-ARCHITECTURE.md  03-DATA-STRUCTURE.md  04-API-DESIGN.md  06-TESTING-STRATEGY.md  07-OBSERVABILITY.md
SPEC-archive/DOCS/: section-14-implementation.md
SPEC/DOCS/: AI-DEVELOPER-GUIDE.md  API-TESTING-GUIDE.md  CONSULT-codegen-hw-op-dtype-redesign.html  ENTERPRISE-BERT-IMPLEMENTATION.md  TESTING-DATA-GUIDE.md  TESTING-ENVIRONMENT.md
SPEC/MD-ARCHIVE/: 00-PHILOSOPHY.md  01-JIT-PIPELINE.md  01-REQUIREMENTS.md  02-ARCHITECTURE.md  02-HARDWARE.md  03-DATA-STRUCTURE.md  03-GRAPH-IR.md  04-API-DESIGN.md  04-OPERATORS.md  05-OPTIMIZATIONS.md  06-RUNTIME.md  07-LOADER.md  08-EXECUTOR.md  09-API.md  10-QUALITY.md  11-MODELS.md  12-STRATEGY-ARBITER.md  14-HW-INTRINSICS.md  15-GPU-HOST-GLUE.md  15-JIT-CONTEXT.md  16-DEVICE-FUSION.md  17-DEVICE-CODEGEN.md  18-SYMDIM-PAGED-KV.md  19-KV-CACHE-OPTIMIZATION.md  20-BATCH-CONCURRENT-INFERENCE.md  21-WEIGHT-PAGING.md  22-PAGE-COMPRESSION.md  23-QUANT-CODEGEN-ALGO.md  24-QUANT-PIPELINE-JIT.md  25-JIT-LIFECYCLE-INFRASTRUCTURE.md  26-VMINSTR-RATIONALIZATION.md  27-ALGORITHM-TEMPLATE.md  28-GRAPH-RESOURCE-PLANNER.md  31-EXECUTOR-DECOMPOSITION.md  32-MEGA-KERNEL-ENHANCEMENT.md  33-MLA-MATRIX-ABSORPTION.md  34-MTP-MULTI-TOKEN-PREDICTION.md  35-QUANTIZED-WEIGHT-PAGE-COMPRESSION.md  36-GLLM-WEIGHT-FORMAT.md  37-HARDWARE-ACCELERATION.md  (+11 more)
benches/: moe_layer.rs  quantized_matmul.rs
docs/: GLOBAL-ABSTRACTION-AUDIT.md  LLM-SUPPORT-ANALYSIS.md
examples/: bench_load.rs  bench_step.rs  benchmark_embeddings.rs  benchmark_llm.rs  benchmark_reranker.rs  check_gguf_tok.rs  debug_gguf_kv.rs  debug_kv9_after.rs  debug_qwen3_tensors.rs  diagnose_jit.rs  dual_track_demo.rs  dump_gemma4_meta.rs  gen_dump.rs  investigate_speed.rs  list_gguf_keys.rs  list_gguf_tensors.rs  list_qwen3_tensors.rs  matrix_test.rs  moe_extreme.rs  parse_gguf_string_offset.rs  parse_gguf_string_table.rs  read_gguf_direct.rs  read_gguf_strings.rs  read_gguf_tokenizer.rs  read_tokenizer_simple.rs  regression.rs  regression.rs.legacy  rerank_dump.rs  test_all_new_models.rs  test_download.rs  test_gguf_metadata.rs  test_gguf_reader.rs  test_gguf_tokenizer.rs  test_glm4.rs  test_moe.rs  test_quantization.rs  test_qwen3_embed.rs  test_qwen3_small.rs
scripts/: check_hf_models.py  gdb_jit_debug.py  regression.sh  regression_gpu.sh  run-regression.sh  test_real_models.sh
src/: BUG-KNOWLEDGE.md  adapter.rs  awq.rs  bert_variants.rs  causal_attention.rs  classify.rs  client.rs  compat.rs  cot_reasoner.rs  decoder_layer.rs  decoder_model.rs  dynamic_bert.rs  early_exit.rs  embeddings.rs  engine.rs  engram.rs  fallback.rs  ffi.rs  flash_attention.rs  fp8.rs  generation.rs  generation_loop.rs  generator_engine.rs  generator_model.rs  gguf.rs  gpu_capabilities.rs  guardrail.rs  handle.rs  head_routing.rs  hooks.rs  intent.rs  intent_tracker.rs  knowledge.rs  kv_cache.rs  lib.rs  model.rs  model_config.rs  model_presets.rs  moe_decoder_layer.rs  moe_generator_model.rs  (+27 more)
src/adapter/: gemma2.rs  glm5.rs  gpt_oss.rs  llama4.rs  ministral.rs  mistral3.rs  mod.rs  phi4.rs  qwen2_5.rs  qwen3.rs  qwen3_embed.rs  qwen3_moe.rs  qwen3_rerank.rs  trait.rs  xlm_r.rs
src/arch/: auto_graph.rs  auto_graph.rs.nlayer  auto_graph.rs.template  auto_graph.rs.template2  c1_v2_graph.rs  c1_v2_tracker.rs  intent_tracker_graph.rs  mod.rs  registry.rs  resolve.rs  template.rs
src/attention/: deterministic.rs  mod.rs
src/backend/: detection.rs  fallback.rs  mod.rs
tests/: api.rs  code_models.rs  common.rs  debug_download.rs  debug_embed_determinism.rs  e2e_alignment.rs  gemma4_dry_run.rs  gpt_oss_loading.rs  integration.rs  quantization_metadata.rs  test_adapters.rs  test_alignment.rs  test_attention_contracts.rs  test_aux_files_debug.rs  test_backend_compat.rs  test_c1_v2_numerical_ref.rs  test_client_lifecycle.rs  test_complete_matrix.rs  test_compression.rs  test_continuous_batching_flow.rs  test_dag_refactor.rs  test_dist.rs  test_distributed_nccl.rs  test_e2e.rs  test_e2e_alignment_diagnostic.rs  test_e2e_alignment_smollm2.rs  test_e2e_batch_inference.rs  test_e2e_c1_v2.rs  test_e2e_classifier.rs  test_e2e_cot_reasoner.rs  test_e2e_embedding.rs  test_e2e_fusion.rs  test_e2e_generator.rs  test_e2e_gpu.rs  test_e2e_guardrail.rs  test_e2e_head_routing.rs  test_e2e_intent.rs  test_e2e_qwen3_guard.rs  test_e2e_rag_pipeline.rs  test_e2e_reranker.rs  (+50 more)
tools/: pytorch_ref_dump.py  pytorch_ref_smollm2.py
(+353 files in other folders)
