[package]
name = "gllm"
version = "0.11.0"
edition = "2021"
authors = ["gllm contributors"]
license = "Apache-2.0"
description = "Pure Rust library for local embeddings, reranking, and text generation with MoE-optimized inference and aggressive performance tuning"
repository = "https://github.com/putao520/gllm"
homepage = "https://github.com/putao520/gllm"
keywords = ["embeddings", "reranking", "nlp", "ml", "rust"]
categories = ["algorithms", "science", "text-processing"]

[lib]
name = "gllm"
path = "src/lib.rs"

[[bin]]
name = "test_models"
path = "test_models.rs"

[[bin]]
name = "stress_test"
path = "stress_test.rs"

[features]
# 默认配置：Fat Binary - 所有后端编译，运行时选择
default = []

# 可选 features
tokio = ["dep:tokio"]
quantized = []
gpu-quantized = ["quantized"]
paged-attention = []
flash-attention = []

# 开发/调试 features
nccl = ["gllm-kernels/nccl"]

[dependencies]
# 通过 gllm-kernels 获取 burn 后端，不直接指定 burn features
burn = { version = "0.20.0-pre.6", default-features = false, features = ["std"] }
burn-ndarray = { version = "0.20.0-pre.6", default-features = false, features = ["std"] }
gllm-kernels = { path = "../gllm-kernels", default-features = false }
burn-import = { version = "0.20.0-pre.6", default-features = false, features = ["safetensors"] }
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq", "rustls-tls"] }
tokenizers = { version = "0.22.1", default-features = false, features = ["fancy-regex"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
dirs = "5"
safetensors = "0.4"
rand = "0.8"
half = "2.4"
memmap2 = "0.9"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "moe_layer"
harness = false

[[bench]]
name = "quantized_matmul"
harness = false
required-features = ["quantized"]
